feat: add coupons permissions and update related services and controllers
