# src/_modules/category/_modules/subcategory/subcategory.controller.ts
@@ -1,28 +1,31 @@
 import {
   Body,
   Controller,
+  Delete,
   Get,
   Param,
   Patch,
+  Post,
   Res,
-  Delete,
 } from '@nestjs/common';
-import { ApiQuery, ApiTags, PartialType, ApiOkResponse } from '@nestjs/swagger';
+import { ApiOkResponse, ApiQuery, ApiTags, PartialType } from '@nestjs/swagger';
 import { Response } from 'express';
 import { Auth } from 'src/_modules/authentication/decorators/auth.decorator';
 import { ApiRequiredIdParam } from 'src/decorators/api/id-params.decorator';
+import { UploadFile } from 'src/decorators/api/upload-file.decorator';
 import { Filter } from 'src/decorators/param/filter.decorator';
 import { RequiredIdParam } from 'src/dtos/params/id-param.dto';
-import { ResponseService } from 'src/globals/services/response.service';
+import { isOne } from 'src/globals/helpers/first-or-many';
 import { buildExamples } from 'src/globals/helpers/generate-example.helper';
+import { tag } from 'src/globals/helpers/tag.helper';
+import { ResponseService } from 'src/globals/services/response.service';
 import {
+  CreateSubCategoryDTO,
   FilterSubCategoryDTO,
   UpdateSubCategoryDTO,
 } from './dto/subcategory.dto';
-import { SubCategoryService } from './subcategory.service';
-import { tag } from 'src/globals/helpers/tag.helper';
-import { isOne } from 'src/globals/helpers/first-or-many';
 import { selectSubCategoryOBJ } from './prisma-args/subcategory.prisma.args';
+import { SubCategoryService } from './subcategory.service';
 
 const prefix = 'subcategories';
 
@@ -35,14 +38,18 @@ export class SubCategoryController {
     private readonly response: ResponseService,
   ) {}
 
-  // @Post('/')
-  // async create(@Res() res: Response, @Body() body: CreateSubCategoryDTO) {
-  //   await this.service.create(body);
-  //   return this.response.created(res, 'subcategory created successfully');
-  // }
+  @Post('/')
+  @UploadFile('image')
+
+  async create(@Res() res: Response, @Body() body: CreateSubCategoryDTO) {
+    await this.service.create(body);
+    return this.response.created(res, 'subcategory created successfully');
+  }
 
   @Patch('/:id')
   @ApiRequiredIdParam()
+    @UploadFile('image')
+  
   async update(
     @Res() res: Response,
     @Param() { id }: RequiredIdParam,
