# swagger-spec.json
@@ -3881,7 +3881,7 @@
             "in": "query",
             "schema": {
               "format": "date-time",
-              "example": "2025-09-13T19:49:40.701Z",
+              "example": "2025-09-14T10:22:14.972Z",
               "type": "string"
             }
           },
@@ -3891,7 +3891,7 @@
             "in": "query",
             "schema": {
               "format": "date-time",
-              "example": "2025-09-13T19:49:40.701Z",
+              "example": "2025-09-14T10:22:14.972Z",
               "type": "string"
             }
           },
@@ -3977,8 +3977,8 @@
                           "usageCount": 1,
                           "minOrderAmount": 1,
                           "freeDelivery": "string",
-                          "startDate": "2025-09-13T19:49:40.703Z",
-                          "endDate": "2025-09-13T19:49:40.704Z",
+                          "startDate": "2025-09-14T10:22:14.975Z",
+                          "endDate": "2025-09-14T10:22:14.975Z",
                           "minDiscountValue": 1,
                           "maxDiscountValue": 1,
                           "createdAt": "2025-06-26T18:17:10.000Z"
@@ -4001,8 +4001,8 @@
                         "usageCount": 1,
                         "minOrderAmount": 1,
                         "freeDelivery": "string",
-                        "startDate": "2025-09-13T19:49:40.704Z",
-                        "endDate": "2025-09-13T19:49:40.704Z",
+                        "startDate": "2025-09-14T10:22:14.975Z",
+                        "endDate": "2025-09-14T10:22:14.975Z",
                         "minDiscountValue": 1,
                         "maxDiscountValue": 1,
                         "createdAt": "2025-06-26T18:17:10.000Z"
@@ -4201,7 +4201,7 @@
             "in": "query",
             "schema": {
               "format": "date-time",
-              "example": "2025-09-13T19:49:40.701Z",
+              "example": "2025-09-14T10:22:14.972Z",
               "type": "string"
             }
           },
@@ -4211,7 +4211,7 @@
             "in": "query",
             "schema": {
               "format": "date-time",
-              "example": "2025-09-13T19:49:40.701Z",
+              "example": "2025-09-14T10:22:14.972Z",
               "type": "string"
             }
           },
@@ -4297,8 +4297,8 @@
                           "usageCount": 1,
                           "minOrderAmount": 1,
                           "freeDelivery": "string",
-                          "startDate": "2025-09-13T19:49:40.703Z",
-                          "endDate": "2025-09-13T19:49:40.704Z",
+                          "startDate": "2025-09-14T10:22:14.975Z",
+                          "endDate": "2025-09-14T10:22:14.975Z",
                           "minDiscountValue": 1,
                           "maxDiscountValue": 1,
                           "createdAt": "2025-06-26T18:17:10.000Z"
@@ -4321,8 +4321,8 @@
                         "usageCount": 1,
                         "minOrderAmount": 1,
                         "freeDelivery": "string",
-                        "startDate": "2025-09-13T19:49:40.704Z",
-                        "endDate": "2025-09-13T19:49:40.704Z",
+                        "startDate": "2025-09-14T10:22:14.975Z",
+                        "endDate": "2025-09-14T10:22:14.975Z",
                         "minDiscountValue": 1,
                         "maxDiscountValue": 1,
                         "createdAt": "2025-06-26T18:17:10.000Z"
@@ -5254,11 +5254,9 @@
         ]
       }
     },
-    "/api/subCategories": {
+    "/api/categories": {
       "post": {
         "operationId": "CategoryController_create",
-        "summary": "",
-        "deprecated": true,
         "parameters": [
           {
             "in": "header",
@@ -5298,7 +5296,7 @@
           }
         },
         "tags": [
-          "Subcategories"
+          "Categories"
         ],
         "security": [
           {
@@ -5416,7 +5414,7 @@
           }
         },
         "tags": [
-          "Subcategories"
+          "Categories"
         ],
         "security": [
           {
@@ -5425,11 +5423,9 @@
         ]
       }
     },
-    "/api/subCategories/{id}": {
+    "/api/categories/{id}": {
       "patch": {
         "operationId": "CategoryController_update",
-        "summary": "",
-        "deprecated": true,
         "parameters": [
           {
             "name": "id",
@@ -5477,7 +5473,7 @@
           }
         },
         "tags": [
-          "Subcategories"
+          "Categories"
         ],
         "security": [
           {
@@ -5595,7 +5591,7 @@
           }
         },
         "tags": [
-          "Subcategories"
+          "Categories"
         ],
         "security": [
           {
@@ -5605,8 +5601,6 @@
       },
       "delete": {
         "operationId": "CategoryController_delete",
-        "summary": "",
-        "deprecated": true,
         "parameters": [
           {
             "name": "id",
@@ -5640,6 +5634,191 @@
         ],
         "responses": {
           "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Categories"
+        ],
+        "security": [
+          {
+            "ACCESS Token": []
+          }
+        ]
+      }
+    },
+    "/api/subcategories": {
+      "post": {
+        "operationId": "SubCategoryController_create",
+        "parameters": [
+          {
+            "in": "header",
+            "required": false,
+            "name": "Locale",
+            "schema": {
+              "example": "en"
+            }
+          },
+          {
+            "in": "header",
+            "required": false,
+            "name": "isLocalized",
+            "schema": {
+              "example": false,
+              "type": "boolean",
+              "enum": [
+                true,
+                false
+              ]
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateSubCategoryDTO"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Subcategories"
+        ],
+        "security": [
+          {
+            "ACCESS Token": []
+          }
+        ]
+      },
+      "get": {
+        "operationId": "SubCategoryController_findAll",
+        "parameters": [
+          {
+            "required": false,
+            "name": "page",
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "required": false,
+            "name": "limit",
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "required": false,
+            "name": "id",
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "required": false,
+            "name": "parentId",
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "required": false,
+            "name": "name",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "required": false,
+            "name": "orderBy",
+            "in": "query",
+            "schema": {
+              "type": "array"
+            }
+          },
+          {
+            "required": false,
+            "name": "moduleId",
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "in": "header",
+            "required": false,
+            "name": "Locale",
+            "schema": {
+              "example": "en"
+            }
+          },
+          {
+            "in": "header",
+            "required": false,
+            "name": "isLocalized",
+            "schema": {
+              "example": false,
+              "type": "boolean",
+              "enum": [
+                true,
+                false
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "examples": {
+                  "get-all-subcategories": {
+                    "summary": "Get All SubCategories",
+                    "value": {
+                      "data": [
+                        {
+                          "id": 1,
+                          "name": "John Doe",
+                          "image": "https://example.com/avatar.png",
+                          "createdAt": "2025-06-26T18:17:10.000Z",
+                          "Parent": {
+                            "id": 1,
+                            "name": "John Doe"
+                          }
+                        }
+                      ],
+                      "total": 1
+                    }
+                  },
+                  "single-subcategory": {
+                    "summary": "Single SubCategory",
+                    "value": {
+                      "data": {
+                        "id": 1,
+                        "name": "John Doe",
+                        "image": "https://example.com/avatar.png",
+                        "createdAt": "2025-06-26T18:17:10.000Z",
+                        "Parent": {
+                          "id": 1,
+                          "name": "John Doe"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            },
             "description": ""
           }
         },
@@ -5690,7 +5869,7 @@
         "requestBody": {
           "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "$ref": "#/components/schemas/UpdateSubCategoryDTO"
               }
@@ -5760,6 +5939,14 @@
             "in": "query",
             "schema": {
               "type": "array"
+            }
+          },
+          {
+            "required": false,
+            "name": "moduleId",
+            "in": "query",
+            "schema": {
+              "type": "number"
             }
           },
           {
@@ -5872,134 +6059,6 @@
         ],
         "responses": {
           "200": {
-            "description": ""
-          }
-        },
-        "tags": [
-          "Subcategories"
-        ],
-        "security": [
-          {
-            "ACCESS Token": []
-          }
-        ]
-      }
-    },
-    "/api/subcategories": {
-      "get": {
-        "operationId": "SubCategoryController_findAll",
-        "parameters": [
-          {
-            "required": false,
-            "name": "page",
-            "in": "query",
-            "schema": {
-              "type": "number"
-            }
-          },
-          {
-            "required": false,
-            "name": "limit",
-            "in": "query",
-            "schema": {
-              "type": "number"
-            }
-          },
-          {
-            "required": false,
-            "name": "id",
-            "in": "query",
-            "schema": {
-              "type": "number"
-            }
-          },
-          {
-            "required": false,
-            "name": "parentId",
-            "in": "query",
-            "schema": {
-              "type": "number"
-            }
-          },
-          {
-            "required": false,
-            "name": "name",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "required": false,
-            "name": "orderBy",
-            "in": "query",
-            "schema": {
-              "type": "array"
-            }
-          },
-          {
-            "in": "header",
-            "required": false,
-            "name": "Locale",
-            "schema": {
-              "example": "en"
-            }
-          },
-          {
-            "in": "header",
-            "required": false,
-            "name": "isLocalized",
-            "schema": {
-              "example": false,
-              "type": "boolean",
-              "enum": [
-                true,
-                false
-              ]
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "examples": {
-                  "get-all-subcategories": {
-                    "summary": "Get All SubCategories",
-                    "value": {
-                      "data": [
-                        {
-                          "id": 1,
-                          "name": "John Doe",
-                          "image": "https://example.com/avatar.png",
-                          "createdAt": "2025-06-26T18:17:10.000Z",
-                          "Parent": {
-                            "id": 1,
-                            "name": "John Doe"
-                          }
-                        }
-                      ],
-                      "total": 1
-                    }
-                  },
-                  "single-subcategory": {
-                    "summary": "Single SubCategory",
-                    "value": {
-                      "data": {
-                        "id": 1,
-                        "name": "John Doe",
-                        "image": "https://example.com/avatar.png",
-                        "createdAt": "2025-06-26T18:17:10.000Z",
-                        "Parent": {
-                          "id": 1,
-                          "name": "John Doe"
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            },
             "description": ""
           }
         },
@@ -9838,12 +9897,12 @@
           "startDate": {
             "format": "date-time",
             "type": "string",
-            "example": "2025-09-13T19:49:40.700Z"
+            "example": "2025-09-14T10:22:14.971Z"
           },
           "endDate": {
             "format": "date-time",
             "type": "string",
-            "example": "2025-09-13T19:49:40.700Z"
+            "example": "2025-09-14T10:22:14.971Z"
           },
           "minDiscountValue": {
             "type": "number"
@@ -9921,12 +9980,12 @@
           "startDate": {
             "format": "date-time",
             "type": "string",
-            "example": "2025-09-13T19:49:40.700Z"
+            "example": "2025-09-14T10:22:14.971Z"
           },
           "endDate": {
             "format": "date-time",
             "type": "string",
-            "example": "2025-09-13T19:49:40.700Z"
+            "example": "2025-09-14T10:22:14.971Z"
           },
           "minDiscountValue": {
             "type": "number"
@@ -10066,12 +10125,36 @@
           }
         }
       },
+      "CreateSubCategoryDTO": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "object",
+            "example": "{\"en\": \"John\", \"ar\": \"جون\"}"
+          },
+          "image": {
+            "type": "string",
+            "format": "binary"
+          },
+          "parentId": {
+            "type": "number"
+          }
+        },
+        "required": [
+          "name",
+          "parentId"
+        ]
+      },
       "UpdateSubCategoryDTO": {
         "type": "object",
         "properties": {
           "name": {
             "type": "object",
             "example": "{\"en\": \"John\", \"ar\": \"جون\"}"
+          },
+          "image": {
+            "type": "string",
+            "format": "binary"
           },
           "parentId": {
             "type": "number"
